CSS/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

body {
	font-family: "Roboto", sans-serif;
	


}

.content {
	box-sizing: border-box;
	padding: 0px 15px;
	text-align: center;
	margin: 0px auto;
	width: 1200px;

}

nav {
	position: fixed;
	border: 2px solid black;
	top: 0;


}

.top-nav {
	width: 100%;
	padding: 0.5em;
	background-color: #C76A11;
	
}

.links{
	float: right;
	
	

	
}

.links li {
	display: inline-block;
	margin: 1em 0em;
	border: 1px solid black;
	border-radius: 4px;
	box-shadow: 0.15em 0.15em 0.15em black;
	-webkit-box-shadow: 0.15em 0.15em 0.05em black;
	-moz-box-shadow: 0.15em 0.15em 0.05em black;
	padding: 0.5em 0.5em;
	background-color: #05627A;
	font-family: 'Lobster', sans-serif;
	font-size: 1.25em;

	
}

.links a {
	padding: 1em;

}

a {
	text-decoration: none;
	color: black;
}

a:visited {
	text-decoration: none;
	color: black;
}


.welcome {
	background-image:url("../img/ptown.JPG");
	background-repeat: no-repeat;
	background-position: 0px -180px;
	background-size: cover;
	margin-top: 0.25em;
	line-height: 2;
	margin-bottom: 4em;
	padding-bottom: 2.5em;
	width: 100%;
	max-height: 800px;
	font-family: 'Lobster', sans-serif;
	color:#00617A;


	

}

.welcome-intro {
	padding-top: 4em;
	font-size: 3em;
	text-shadow: 1px 1px #000;
	vertical-align:middle;

}

.welcome-text {
	font-size: 4em;
	text-shadow: 1px 1px #000;
	vertical-align:middle;
	padding-bottom: .5em;
	
}


.welcome-img {
	background-image: url("../img/mugshot.jpg");
	border-radius: 100px;
	-webkit-border-radius: 100px;
	-moz-border-radius: 100px;
	background-size: cover;
	width: 200px;
	height: 200px;
	margin: auto;
	border: 4px solid black;

}



.introduction-section {
	background-size: cover;
	background-position: fixed;
	padding:2em;
	vertical-align: top;
	line-height: 2em;
	font-size: 1.15em;

	
}


.introduction-section p {
	width: 1000px;
	vertical-align: middle;
	margin-right: auto;
	margin-left: auto;
	margin-top: 0.25em;

}

.introduction-section h1 {
	margin-bottom: 1em;
	font-weight: bold;
	font-size: 2em;
	color: #00617A;
	font-family: "Lobster", sans-serif;
}

.portfolio {
	margin-top: 5em;
}

.portfolio h1{
	margin-bottom: 3.5em;
	font-size: 2em;
	font-weight: bold;
	color: #00617A;
	font-family: "Lobster", sans-serif;
}

.port-work {
	margin-right: auto;
	margin-left: auto;
}


.port-work li {
	display: inline-block;
	width: 15%;
	margin: 1em;
	font-size: 1.15em;
	vertical-align: top;
	text-align: center;
	

}

.port-work img {
	-webkit-border-radius: 75px;
	-moz-border-radius: 75px;
	border-radius: 75px;
	border: 4px solid black;
	margin-bottom: 1.5em;
	background-position: fixed;
	background-size: fill;
	width: 150px;
	height: 150px;

	
}

.icons {
	margin-right: 2.5em;

}

.icons li {
	font-family: font-awesome;
	display: inline-block;
	margin-top: 4em;
	font-size: 1.5em;
	width: 100px;
	margin-left: auto;
	margin-right: auto;
	text-align: center;

}
.icons a:link {
	color:#00617A;
}

.icons a:visited {
	color:#00617A;

}


.contact h1 {
	margin-top: 5em;
	font-weight: bold;
	font-size: 2em;
	color: #00617A;
	font-family: "Lobster", sans-serif;
}

.contact h2 {
	margin-top: 3em;
	font-size: 1.75em;
	font-family: "Lobster", sans-serif;
}


.contact form {
	font-size: 1.15em;
	margin-top: 3em;
}

.contact input {
	margin: 1em 0 1em 0;
}



.footer {
	padding: 2em 0 2em 0;
	border: 1px solid black; 
	border-radius: 10px;
	background-color: #C76A11;
	margin-top: 1em;
	font-weight: bold;
	color: #00617A;
	font-family: "Lobster", sans-serif;
}


.footer a {
	padding: 1em 25em 1em;
	font-size: 1.75em;

}


@media only screen and (min-width: 901px)  and (max-width: 1700px) {
	.content {
	max-width:900px;
		
	}



	.welcome {
		height: 1200px;
		margin-bottom: -5em;
		background-position: 0px -110px;

	}

	.introduction-section p {
		margin-right: auto;
		margin-left: auto;
		max-width: 700px;
		text-align: center;
	}
	.introduction-section h1 {
		margin-top: 2em;
	}
	
		.port-work li {
		width: 25%;
		text-align: left;
		
		
	}
}



@media only screen and (max-width: 900px) {
	.content {
		max-width:600px;
		
	}
	
	.links {
		font-size: 1em;
		margin-right: 25px;
	}

	.welcome {
		height: 1800px;
		background-size: cover;
		background-position: 0px -130px;
		max-width: 1500px;
		margin-bottom: -2.5em;
	}

	.inctroduction-section {
		margin-top: -2em;
	}

	.introduction-section p {
		margin-right: auto;
		margin-left: auto;
		max-width: 500px;
		text-align: center;
	}

	.port-work li {
		width: 200px;
		vertical-align: center;
		text-align: center;
		margin-right: 25px;
		margin-left: auto;
		
	}

	.port-work {
		margin: 0;
	}

	.top p {
		margin-left: auto;
		margin-right: auto;
		max-width: 200px;
		text-align: center;
	}


}

